convert to kotlin with gradle