@@ -6,9 +6,9 @@ import io.reactivex.Flowable;
 import io.reactivex.Observable;
 import io.reactivex.Single;
 import io.reactivex.disposables.Disposable;
-import javaslang.collection.List;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.concurrent.CompletableFuture;
 
 /**
@@ -37,7 +37,7 @@ public class Part01CreateFlowable implements BaseTestObservables {
 
     @Test
     public void fromArray() {
-        Flowable<String> flowable = Flowable.fromArray(new String[]{"red", "green", "blue", "black"});
+        Flowable<String> flowable = Flowable.fromArray("red", "green", "blue", "black");
 
         flowable.subscribe(
                 val -> log.info("Subscriber received: {}"));
@@ -45,7 +45,7 @@ public class Part01CreateFlowable implements BaseTestObservables {
 
     @Test
     public void fromIterable() {
-        Flowable<String> flowable = Flowable.fromIterable(List.of("red", "green", "blue"));
+        Flowable<String> flowable = Flowable.fromIterable(Arrays.asList("red", "green", "blue"));
 
         flowable.subscribe(
                 val -> log.info("Subscriber received: {}"));
